--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 
+# Dependency directory
+node_modules
+
+# Screenshots
+reports/screenshots
+
+#VSCode files
+.vscode/*
+
+#profile
+profiles/stage.json
+
+#Package-lock
+package-lock.json
+
+#prettierrc
+prettierrc.json
