--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   node: circleci/node@4.1.0
   browser-tools: circleci/browser-tools@1.1.0
 jobs:
-  test:
+  build:
     docker:
       - image: cimg/node:lts-browsers
     steps:
