--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: npm run test:chrome
           
       - store_artifacts:
-          path: test/test-results
+          path: test-results/testcafe
           
     
         
